# HC-TCP-IM-Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
build_linux/: .ninja_deps  .ninja_log  CMakeCache.txt  DartConfiguration.tcl  Makefile  build.ninja
build_linux/src/: Makefile
conf/: server.ini  server_benchmark.ini  server_benchmark_debug.ini  server_benchmark_lt.ini
docs/Step_A/: A-总结：全流程串讲.md  A-阶段一：线程池模块的详细设计.md  A-阶段三：服务器消息通信工具详解.md  A-阶段二：muduo架构详解.md  A-阶段五：优化与集成测试详解.md  A-阶段六：Redis集成优化说明.md  A-阶段六：引入Redis优化.md  A-阶段四：服务器聊天业务详解.md  A-阶段开发路径与成果复盘总结.md
docs/Step_B/: B-P0-消息可靠性并发与数据层升级计划.md  B-P0-网络层与协议升级计划.md  B-升级计划总览.md  C-P0-消息可靠性并发与数据层逐阶段任务清单.md  C-P0-网络层与协议逐阶段任务清单.md  C-P1-分布式稳定性可观测与工程化逐阶段任务清单.md  M2.md  M3.md  M4.md  M5.md  复盘.md  复盘答案.md  重构清单.md  重构清单求职导向审查建议.md
docs/Step_B/升级计划书/: B-P0-消息可靠性并发与数据层升级计划.md  B-P1-分布式稳定性可观测与工程化计划.md
docs/Step_B/升级计划详细步骤书/: C-任务清单总览.md
docs/Step_B/各阶段结算文档/: M1.md  M5.md
docs/after/: B-面试拷问.md  B-面试拷问答案.md  C-项目拷问参考答案.md  专业组件名词解释.md
docs/after/Before_Step_B/: C-项目拷问.md  C-项目拷问2.md  D-项目各业务运行流程md
docs/before/: 前沿服务器技术栈与发展路线简述.md  网络服务器核心概念&需求拆解（深度学习导向）.md  高性能 TCP 网关_消息服务器项目开发计划书.md
docs/八股文/: C++.md  Linux.md
docs/其他/: C++ 高并发 Reactor 服务器（排错表）.md  待办.md
proto/: auth.proto  common.proto  heartbeat.proto  message.proto
scripts/: init_mysql_schema.ps1  m2_e2e_verify.py
sql/: 001_m2_reliable_message.sql
src/: CMakeLists.txt  server.cpp  server_full.cpp
src/base/: blockingQueue.h  config.cpp  config.h  log.cpp  log.h  redisClient.cpp  redisClient.h  threadpool.cpp  threadpool.h  util.cpp  util.h
src/codec/: buffer.cpp  buffer.h  codec.cpp  codec.h  messageSerializer.cpp  messageSerializer.h  protoCodec.cpp  protoCodec.h  protocol.cpp  protocol.h
src/http/: metricsServer.cpp  metricsServer.h
src/infra/: circuitBreaker.cpp  circuitBreaker.h  metricsRegistry.cpp  metricsRegistry.h  rateLimiter.cpp  rateLimiter.h  traceContext.cpp  traceContext.h
src/net/: channel.cpp  channel.h  currentThread.cpp  currentThread.h  epollPoller.cpp  epollPoller.h  eventLoop.cpp  eventLoop.h  inetAddress.h  nonCopyable.h  tcpConnection.cpp  tcpConnection.h  tcpServer.cpp  tcpServer.h  timestamp.cpp  timestamp.h
src/service/: authService.cpp  authService.h  heartbeatService.cpp  heartbeatService.h  messageService.cpp  messageService.h  overloadProtectService.cpp  overloadProtectService.h  routingService.cpp  routingService.h
src/storage/: deliveryRepository.cpp  deliveryRepository.h  messageRepository.cpp  messageRepository.h  messageStore.cpp  messageStore.h  mysqlClient.cpp  mysqlClient.h  sessionRepository.cpp  sessionRepository.h
test/: CMakeLists.txt  benchmarkClient.cpp  interactiveClient.cpp  zClientUsage.md
test_report/: benchmarkReport.md  et_c100_i1000.md  et_c20_i0.md  et_c500_i500.md  lt_c20_i0.md  lt_c500_i500.md  report_et_100.md  report_et_200.md  report_et_500.md
tests/: test_util.h
tests/benchmark/: benchmarkClient.cpp  core_benchmark.cpp
tests/codec/: buffer_test.cpp
tests/infra/: circuitBreaker_test.cpp  rateLimiter_test.cpp
tests/integration/: message_flow_test.cpp
tests/interact/: interactiveClient.cpp
tests/service/: overloadProtectService_test.cpp
